--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,28 @@
+
 /* header*/
 
 header {
+    height: 60px;
     background-color: #ffffff;
-    border-bottom: 2px solid #777777;
+    border-bottom: 1px solid #777777;
 }
 
 .dHead {
     margin: 0 auto;
     max-width: 960px;
-    padding-bottom: 20px;
+    position: relative;
+    height: 60px;
 }
 
 h1 {
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #4aaaa5;
-    padding: 1em;
-    margin-left: 2em;
-    display: inline;
+    padding: 20px;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    margin: 0px;
 }
 
 nav li {
@@ -43,15 +48,14 @@ ul {
 
 /* body */
 
-/*
-body {
-   
+body{
+    margin: 0px;
 }
-*/
 
 h2 {
     color: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-top: 0px;
 }
 
 .aboutMe {
@@ -67,17 +71,54 @@ h2 {
 
 .dBody {
     width: 100%;
+    height: 90vh;
     margin: 0 auto;
     padding: 0;
-    background-image: url("assets/images/dustScratches.png");
+    background-image: url("../images/background.png");
     background-color: antiquewhite;
 }
 
 .dBox {
     max-width: 900px;
+    position: relative;
+    top: 30px;
     margin: 0 auto;
-    padding: 50px;
+    padding: 30px;
     background-color: #ffffff;
+}
+/* Portfolio */
+
+.jobs {
+    padding: 30px 30px 0px 0px;
+    opacity: 1;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    position: relative;
+}
+
+.banner {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%)
+}
+
+.jName {
+    background-color: #4aaaa5;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 12px;
+}
+
+.jobs:hover {
+    opacity: 0.3;
+}
+
+.jobs:hover .banner {
+    opacity: 1;
 }
 
 /* Contact Page */
@@ -86,6 +127,7 @@ form{
     color: #777777;
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; 
 }
+
 /* foot */
 
 footer {
@@ -100,7 +142,8 @@ footer {
     color: white;
     background-color: #666666;
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-    border-top: 5px solid #4aaaa5;
+    font-size: small;
+    border-top: 8px solid #4aaaa5;
 }
 
 
