--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 
-/* header*/
+/* ---------------------------header----------------------------*/
 
 header {
-    height: 60px;
+    height: 80px;
     background-color: #ffffff;
     border-bottom: 1px solid #777777;
 }
@@ -11,14 +11,15 @@ header {
     margin: 0 auto;
     max-width: 960px;
     position: relative;
-    height: 60px;
+    height: 80px;
 }
 
-h1 {
+.wg {
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #4aaaa5;
     padding: 20px;
+    height: 40px;
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -28,6 +29,10 @@ h1 {
 nav li {
     float: right;
     
+}
+
+nav {
+    padding-top: 30px;
 }
 
 nav li a {
@@ -44,9 +49,10 @@ nav li a:hover {
 
 ul {
     list-style-type: none;
+    margin: 0px;
 }
 
-/* body */
+/* ---------------------body-------------------------------- */
 
 body{
     margin: 0px;
@@ -58,30 +64,36 @@ h2 {
     margin-top: 0px;
 }
 
+hr {
+    margin: 0px;
+}
 .aboutMe {
     color: #777777;
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-    padding: 50px;
+    padding-top: 20px;
+    margin: 0px;
+    line-height: 2.25;
+    font-size: 16px;
 }
 
 #bioPic {
     width: 15em;
     float: left;
+    margin: 30px 30px 30px 0px;
 }
 
 .dBody {
     width: 100%;
-    height: 90vh;
+    min-height: calc(100vh - 188px);
     margin: 0 auto;
-    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
     background-image: url("../images/background.png");
     background-color: antiquewhite;
 }
 
 .dBox {
     max-width: 900px;
-    position: relative;
-    top: 30px;
     margin: 0 auto;
     padding: 30px;
     background-color: #ffffff;
@@ -125,15 +137,45 @@ h2 {
 
 form{
     color: #777777;
-    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; 
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 16px;
+    padding-top: 30px; 
 }
 
-/* foot */
+.info {
+    width: 100%;
+    height: 20px;
+    text-indent: 10px;
+    margin-bottom: 20px;
+}
+
+.message {
+    width: 100%;
+    height: 200px;
+    text-indent: 10px;
+    margin-bottom: 20px;
+}
+
+.submit {
+    width: 100px;
+    height: 40px;
+    background-color: #4aaaa5; 
+    text-align: center;
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    border: none;
+}
+
+.submit:hover {
+    opacity: 0.5;
+}
+
+/* --------------------------------- foot --------------------------- */
 
 footer {
     position: fixed;
     bottom: 0;
-    left: 0;
     width: 100%;
     padding: 0;
     clear: both;
@@ -145,5 +187,4 @@ footer {
     font-size: small;
     border-top: 8px solid #4aaaa5;
 }
-
 
