--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,24 +64,6 @@ h2 {
     margin-top: 0px;
 }
 
-hr {
-    margin: 0px;
-}
-.aboutMe {
-    color: #777777;
-    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-    padding-top: 20px;
-    margin: 0px;
-    line-height: 2.25;
-    font-size: 16px;
-}
-
-#bioPic {
-    width: 15em;
-    float: left;
-    margin: 30px 30px 30px 0px;
-}
-
 .dBody {
     width: 100%;
     min-height: calc(100vh - 188px);
@@ -98,42 +80,73 @@ hr {
     padding: 30px;
     background-color: #ffffff;
 }
-/* Portfolio */
 
+hr {
+    margin: 0px;
+}
+
+/* --- Biography --- */
+
+.aboutMe {
+    color: #777777;
+    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    padding-top: 20px;
+    margin: 0px;
+    line-height: 2.25;
+    font-size: 16px;
+}
+
+#bioPic {
+    width: 15em;
+    float: left;
+    margin: 30px 30px 30px 0px;
+}
+
+
+/* --- Portfolio --- */
+
+.port {
+    position: relative;
+    width: 300px;
+    height: 225px;
+}
 .jobs {
     padding: 30px 30px 0px 0px;
     opacity: 1;
     transition: .5s ease;
     backface-visibility: hidden;
-    position: relative;
 }
 
 .banner {
+    width: 300px;
+    height: 50px;
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: -50px;
+    left: 150px;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%)
 }
 
 .jName {
     background-color: #4aaaa5;
+    padding: 20px;
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 12px;
+    font-size: 22px;
+    text-align: center;
 }
 
-.jobs:hover {
+.port:hover .jobs {
     opacity: 0.3;
 }
 
-.jobs:hover .banner {
+.port:hover .banner {
     opacity: 1;
 }
 
-/* Contact Page */
+/* --- Contact Page --- */
 
 form{
     color: #777777;
