--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ nav li a {
 
 nav li a:hover {
     background-color: #4aaaa5;
+    color: white;
 }
 
 ul {
@@ -66,10 +67,10 @@ h2 {
 
 .dBody {
     width: 100%;
-    min-height: calc(100vh - 188px);
+    min-height: calc(100vh - 199px);
     margin: 0 auto;
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 88px;
     background-image: url("../images/background.png");
     background-color: antiquewhite;
 }
@@ -152,7 +153,8 @@ form{
     color: #777777;
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 16px;
-    padding-top: 30px; 
+    padding-top: 30px;
+    line-height: 1.75; 
 }
 
 .info {
